# ocpl_benchmark_scripts

ocpl_benchmark_scripts/: CMakeLists.txt  package.xml
ocpl_benchmark_scripts/data/: halfopen_box1.yaml
ocpl_benchmark_scripts/data/benchmark2/: grid.yaml  grid_settings.txt  names.txt  sample_settings.txt
ocpl_benchmark_scripts/data/benchmark3/: grid.yaml  grid_settings.txt  halton_incremental.yaml  names.txt  random_incremental.yaml
ocpl_benchmark_scripts/data/benchmark4/: grid.yaml  grid_settings.txt  halton_incremental.yaml  names.txt  random_incremental.yaml  sample_settings.txt
ocpl_benchmark_scripts/data/benchmark5/: halton_gpq.yaml  halton_gs.yaml  halton_ls.yaml  halton_lspq.yaml  names.txt
ocpl_benchmark_scripts/data/benchmark6/: halton_ls.yaml  halton_lspq.yaml  names.txt  sample_settings.txt
ocpl_benchmark_scripts/data/benchmark7/: halton_gpq.yaml  halton_gs.yaml  names.txt
ocpl_benchmark_scripts/data/kuka/: filename_list.txt  grid.yaml  halton.yaml  halton_incremental.yaml  kuka_gpq.yaml  kuka_greedy.yaml  kuka_gs.yaml  kuka_ls.yaml  kuka_lspq.yaml  random.yaml  random_incremental.yaml
ocpl_benchmark_scripts/data/kuka_on_rail/: grid.yaml  halton_fixed.yaml  halton_incremental.yaml  names.txt  random_fixed.yaml  random_incremental.yaml  sample_settings.txt
ocpl_benchmark_scripts/data/sp/: grid1.yaml  grid_settings.txt  halton_fixed.yaml  halton_incremental.yaml  names.txt  random_fixed.yaml  random_incremental.yaml  sample_settings.txt
ocpl_benchmark_scripts/src/: benchmark1.cpp  benchmark2.cpp  benchmark3.cpp  benchmark4.cpp  benchmark5.cpp  benchmark6.cpp  benchmark7.cpp  kuka_on_rail.cpp
